Publish all to ignore folders